--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,132 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Práctica de evaluación - Chat con Sockets</title>
-  <link rel="stylesheet" href="/styles.css" />
+  <style>
+    /* ====== Fondo animado azul ====== */
+    body {
+      margin: 0;
+      height: 100vh;
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+      background: linear-gradient(-45deg, #1e3c72, #2a5298, #1e90ff, #00bfff);
+      background-size: 400% 400%;
+      animation: moverFondo 12s ease infinite;
+    }
+
+    @keyframes moverFondo {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    /* ====== Contenedor central ====== */
+    .container {
+      width: 90%;
+      max-width: 700px;
+      padding: 20px;
+    }
+
+    .card, .chat-wrap {
+      background: rgba(255, 255, 255, 0.9);
+      padding: 20px;
+      border-radius: 15px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+      border: 4px solid #003cff; /* 🔵 Contorno azul fuerte */
+      animation: flotar 3s ease-in-out infinite;
+    }
+
+    @keyframes flotar {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-8px); }
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    h2, h3 {
+      text-align: center;
+      color: #003cff;
+    }
+
+    .btn {
+      display: block;
+      width: 100%;
+      padding: 15px;
+      margin-top: 10px;
+      border: none;
+      background: #003cff;
+      color: white;
+      font-size: 18px;
+      font-weight: bold;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .btn:hover {
+      background: #0056ff;
+      transform: scale(1.05);
+    }
+
+    input {
+      width: 100%;
+      padding: 10px;
+      margin-top: 10px;
+      border-radius: 8px;
+      border: 2px solid #003cff;
+      font-size: 16px;
+    }
+
+    .messages {
+      height: 250px;
+      overflow-y: auto;
+      border: 2px solid #ccc;
+      padding: 10px;
+      border-radius: 8px;
+      margin-bottom: 10px;
+      background: #f9f9f9;
+    }
+
+    .msg {
+      margin-bottom: 10px;
+      padding: 6px;
+      border-left: 4px solid #003cff;
+      background: #e6f0ff;
+      border-radius: 5px;
+    }
+
+    .meta {
+      font-size: 12px;
+      color: #555;
+    }
+
+    .system {
+      text-align: center;
+      font-style: italic;
+      color: #888;
+    }
+
+    /* 🔹 Nueva disposición: input arriba, botón abajo */
+    .send-area {
+      display: flex;
+      flex-direction: column; /* Apila input y botón */
+      gap: 10px;
+    }
+
+    /* 🔹 Campo de mensaje más grande */
+    #msgInput {
+      width: 100%;
+      height: 70px; /* más alto */
+      font-size: 18px;
+      padding: 15px;
+      border: 2px solid #003cff;
+      border-radius: 8px;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
@@ -22,7 +147,7 @@
       </div>
 
       <div class="main">
-        <!-- Panel de descripción (texto) -->
+        <!-- Panel de descripción -->
         <div class="description">
           <p>
             Abran varias pestañas o ventanas del navegador e ingresen diferentes nombres. 
